fix(labelling): Fix small styling / spacing issues

--- a/src/labelling/labelling.css
+++ b/src/labelling/labelling.css
@@ -25,6 +25,8 @@
   opacity: 1;
   padding: 0 14px;
   transition: opacity 0.3s ease;
+  outline: none;
+  cursor: pointer;
 }
 
 .labellingComponent .commonButton {
@@ -37,6 +39,8 @@
   line-height: 26px;
   padding: 0 12px;
   margin: 10px 5px 0 0;
+  outline: none;
+  cursor: pointer;
 }
 
 .labellingComponent .textArea {
